added test suite. unit tests, integration test and a couple of end to end tests. added tests tags to composables